# agentic-ai-frameworks

01_CrewAI/: README.md
01_CrewAI/emergingtechnologyresearch/: README.md  pyproject.toml  report.json  report.md
01_CrewAI/emergingtechnologyresearch/src/emergingtechnologyresearch/: crew.py  main.py
01_CrewAI/emergingtechnologyresearch/src/emergingtechnologyresearch/config/: tasks.yaml
